--- a/www/index.html
+++ b/www/index.html
@@ -25,6 +25,7 @@
         <ul>
             <li><a href="test-redir">Test a redirection</a></li>
             <li><a href="test-post">Test a POST form</a></li>
+            <li><a href="test-upload">Test a file upload form</a></li>
             <li><a href="wstest.html">Test the WebSockets page</a></li>
             <li><a href="wschat.html">Test the multi-users chat page</a></li>
             <li><a href="test.pyhtml">Test a pyhtml template page</a></li>
